# nevi

./: pyproject.toml
.streamlit/: config.toml
nevi/: main.py
nevi/pages/: wpp_chat_analysis.py
nevi/partials/: base_page.py  custom_bottom.py  custom_sidebar.py
nevi/utils/: my_pages.py
