[tool.poetry]
name = "nevi"
version = "0.1.0"
description = ""
authors = ["Pedro Cunha <dev@citsec.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
streamlit-extras = "^0.5.0"
streamlit-javascript = "^0.1.5"
streamlit-option-menu = "^0.4.0"
extra-streamlit-components = "^0.1.71"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
